# ml-projects

MAIE/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  audit_thresholds.yaml  constraints.yaml  docker-compose.yml  pyproject.toml
MAIE/alerts/: maie.rules.yml
MAIE/artifacts/: feature_names.json  structured_model_uri.txt
MAIE/docs/: MAIE_Research_Paper.md  PRODUCTION_CHECKLIST.md  PRODUCTION_RUNBOOK.md  RELEASE_NOTES.md  audit_report.md  numbers.json  threshold_status.json
MAIE/expected/: expected_201801.parquet  expected_201802.parquet  expected_201803.parquet  expected_201804.parquet  expected_201805.parquet  expected_201806.parquet  expected_201807.parquet  expected_201808.parquet  expected_201809.parquet  expected_201810.parquet  expected_201811.parquet  expected_201812.parquet  expected_201901.parquet  expected_201902.parquet  expected_201903.parquet  expected_201904.parquet  expected_201905.parquet  expected_201906.parquet  expected_201907.parquet  expected_201908.parquet  expected_201909.parquet  expected_201910.parquet  expected_201911.parquet  expected_201912.parquet  expected_202001.parquet  expected_202002.parquet  expected_202003.parquet  expected_202004.parquet  expected_202005.parquet  expected_202006.parquet  expected_202007.parquet  expected_202008.parquet  expected_202009.parquet  expected_202010.parquet  expected_202011.parquet  expected_202012.parquet  expected_202101.parquet  expected_202102.parquet  expected_202103.parquet  expected_202104.parquet  (+46 more)
MAIE/k8s/: cronjob.yaml  deployment.yaml
(+529 files in other folders)
